[package]
name = "aether"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4"]}
data-encoding = "2.3.2"
num-bigint = "0.4.3"
ring = "0.16.20"
sled = "0.34.7"
structopt = "0.3.25"
clap = "2.34.0"
